--- a/src/app/conteudo-home/conteudo-home.component.html
+++ b/src/app/conteudo-home/conteudo-home.component.html
@@ -21,5 +21,5 @@
     </mat-card-content>
   </mat-card>
   <mat-divider [vertical]="true"></mat-divider>
-  <app-lista-clientes></app-lista-clientes>
+  <app-lista-clientes [codigoVendedorSelecionado]="codigoVendedorSelecionado"></app-lista-clientes>
 </div>
