Codigo Final - Modal Parcial

--- a/src/app/modal-vendedor/modal-vendedor.component.html
+++ b/src/app/modal-vendedor/modal-vendedor.component.html
@@ -16,5 +16,5 @@
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
   <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)= alterarDados()>Confirmar</button>
-  <button mat-raised-button (click)="excluirCliente(data.cdvend)">Excluir Cliente</button>
+  <button mat-raised-button (click)="excluirVendedor(data.cdvend)">Excluir Vendedor</button>
 </div>
